@@ -37,11 +37,9 @@ $cookieconsent = $cms->session->options['cookieconsent'];
 // save a new form key in the users session cookie
 // this will also be put into a 'hidden' field in the form
 if ($ps->conf['main']['security']['csrf_protection']) $cms->session->key($form->key());
-		
 
-$_GET['ref'] ??= null;
+$validfields = array('submit','cancel','ref');		
 $_GET['ref'] = htmlspecialchars($_GET['ref']); //XSS Fix. Thanks to JS2007
-$validfields = array('submit','cancel','ref');
 $cms->theme->assign_request_vars($validfields, true);
 
 if ($cancel) {
