@@ -40,6 +40,7 @@ Version 0.0.4b (in progress)
 * [Removed] Redundant admin checks in Admin CP.
 * [Improved] Handle multiple PsychoStats instances with multiple themes installed.
 * [Fixed] Errors when attempting to edit team with insufficient permissions.
+* [Fixed] Login errors related to multiple open instances.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
